[package]
name = "chiavdf"
version = "1.1.4"
edition = "2021"
license = "Apache-2.0"
description = "Bindings to the chiavdf C++ library for vdf verification."
authors = ["Brandon Haggstrom <b.haggstrom@chia.net>"]
homepage = "https://github.com/Chia-Network/chiavdf"
repository = "https://github.com/Chia-Network/chiavdf"
links = "chiavdf"

[dependencies]
link-cplusplus = "1.0.9"

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1.50"
